<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/layout_title_timing" layout="@layout/layout_header_title" />
    <RelativeLayout android:id="@id/layout_time_picker" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/date_picker_margin_top" android:layout_below="@id/layout_title_timing">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.ycuwq.datepicker.WheelPicker android:id="@id/v_picker_hour" android:layout_width="0.0dip" android:layout_height="@dimen/date_picker_height" android:layout_weight="1.0" app:currentItemPosition="0" app:halfVisibleItemCount="1" app:indicatorText="@string/hour" app:indicatorTextSize="18.0sp" app:itemMaximumWidthText="@string/date_picker_item_max_text_width" app:itemTextColor="@color/datePickerItemColor" app:itemTextSize="16.0sp" app:selectedTextColor="@color/titleColor" app:selectedTextSize="18.0sp" app:wheelCurtain="false" app:wheelCurtainBorder="false" app:wheelCurtainColor="#fff1f1f1" app:wheelCyclic="true" app:zoomInCenterItem="true" />
            <com.ycuwq.datepicker.WheelPicker android:id="@id/v_picker_minute" android:layout_width="0.0dip" android:layout_height="@dimen/date_picker_height" android:layout_weight="1.0" app:currentItemPosition="0" app:halfVisibleItemCount="1" app:indicatorText="@string/minute" app:indicatorTextSize="18.0sp" app:itemMaximumWidthText="@string/date_picker_item_max_text_width" app:itemTextColor="@color/datePickerItemColor" app:itemTextSize="16.0sp" app:selectedTextColor="@color/titleColor" app:selectedTextSize="18.0sp" app:textGradual="true" app:wheelCurtain="false" app:wheelCurtainBorder="false" app:wheelCyclic="true" app:zoomInCenterItem="true" />
        </LinearLayout>
        <View android:background="@color/wheelCurtainColor" android:layout_width="fill_parent" android:layout_height="@dimen/date_picker_item_height" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textColor="@color/selector_end_timing_button_text" android:gravity="center" android:id="@id/tv_cancel" android:background="@drawable/selector_oval_button_for_end_timing" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginLeft="70.0dip" android:layout_marginTop="70.0dip" android:text="@string/cancel" android:layout_below="@id/layout_time_picker" android:layout_alignParentLeft="true" />
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/tv_start" android:background="@drawable/selector_oval_button_for_start_timing" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="70.0dip" android:layout_marginRight="70.0dip" android:text="@string/start" android:layout_below="@id/layout_time_picker" android:layout_alignParentRight="true" />
    <TextView android:textSize="56.0sp" android:textColor="@color/titleColor" android:gravity="center" android:id="@id/tv_time" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/date_picker_height" android:layout_marginTop="@dimen/date_picker_margin_top" android:layout_below="@id/layout_title_timing" />
</RelativeLayout>