<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/alarm_time_text_size" android:textColor="@color/white" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:text="@string/ring_on_time" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/white" android:id="@id/tv_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/tv_title" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/white" android:id="@id/tv_stop_ring" android:background="@drawable/selector_btn_ring" android:paddingLeft="50.0dip" android:paddingTop="10.0dip" android:paddingRight="50.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="100.0dip" android:text="@string/stop" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/white" android:id="@id/tv_snap" android:background="@drawable/selector_btn_ring" android:paddingLeft="50.0dip" android:paddingTop="10.0dip" android:paddingRight="50.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/snap" android:layout_above="@id/tv_stop_ring" android:layout_centerHorizontal="true" />
</RelativeLayout>