<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="right" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="-65.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/layout_title_timing" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="@dimen/app_title_height">
        <ImageView android:id="@id/img_back" android:paddingLeft="18.0dip" android:paddingTop="18.0dip" android:paddingBottom="18.0dip" android:layout_width="30.0dip" android:layout_height="fill_parent" android:foreground="?android:selectableItemBackground" android:src="@mipmap/img_back" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/tv_title2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="返回" android:layout_toRightOf="@id/img_back" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_time_picker" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/date_picker_margin_top" android:layout_below="@id/layout_title_timing">
        <LinearLayout android:orientation="horizontal" android:paddingLeft="-30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.ycuwq.datepicker.WheelPicker android:id="@id/v_picker_hour" android:layout_width="0.0dip" android:layout_height="@dimen/date_picker_height" android:layout_weight="1.0" app:currentItemPosition="0" app:halfVisibleItemCount="1" app:indicatorText="@string/hour" app:indicatorTextSize="23.0sp" app:itemMaximumWidthText="@string/date_picker_item_max_text_width" app:itemTextColor="@color/normalGrayColor" app:itemTextSize="16.0sp" app:selectedTextColor="@color/white" app:selectedTextSize="23.0sp" app:wheelCurtain="false" app:wheelCurtainBorder="false" app:wheelCurtainColor="#fff1f1f1" app:wheelCyclic="true" app:zoomInCenterItem="true" />
            <com.ycuwq.datepicker.WheelPicker android:id="@id/v_picker_minute" android:layout_width="0.0dip" android:layout_height="@dimen/date_picker_height" android:layout_weight="1.0" app:currentItemPosition="0" app:halfVisibleItemCount="1" app:indicatorText="@string/minute" app:indicatorTextSize="23.0sp" app:itemMaximumWidthText="@string/date_picker_item_max_text_width" app:itemTextColor="@color/normalGrayColor" app:itemTextSize="16.0sp" app:selectedTextColor="@color/white" app:selectedTextSize="23.0sp" app:textGradual="true" app:wheelCurtain="false" app:wheelCurtainBorder="false" app:wheelCyclic="true" app:zoomInCenterItem="true" />
            <com.ycuwq.datepicker.WheelPicker android:id="@id/v_picker_second" android:layout_width="0.0dip" android:layout_height="@dimen/date_picker_height" android:layout_weight="1.0" app:currentItemPosition="0" app:halfVisibleItemCount="1" app:indicatorText="@string/second" app:indicatorTextSize="23.0sp" app:itemMaximumWidthText="@string/date_picker_item_max_text_width" app:itemTextColor="@color/normalGrayColor" app:itemTextSize="16.0sp" app:selectedTextColor="@color/white" app:selectedTextSize="23.0sp" app:textGradual="true" app:wheelCurtain="false" app:wheelCurtainBorder="false" app:wheelCyclic="true" app:zoomInCenterItem="true" />
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/tv_start" android:background="@drawable/selector_oval_button_for_start_timing" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginTop="80.0dip" android:text="@string/start" android:layout_below="@id/layout_time_picker" android:layout_centerInParent="true" />
    <TextView android:textSize="56.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_time" android:background="@color/colorPrimary" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/date_picker_height" android:layout_marginTop="@dimen/date_picker_margin_top" android:layout_below="@id/layout_title_timing" />
</RelativeLayout>